# py-udp-loop

./: .gitignore  Cargo.toml  pyproject.toml  rebuild-install.bash  rustfmt.toml
.cargo/: config
.fso-amem/: project.toml
src/: lib.rs
